--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1><font size = "6"><font color = "white"> Address: LP 63 Eastern Main Road, San Juan.</font></h1>
 <h2><font size = "6"><font color = "white"> Telephone: (+1868) 555-5555.Fax: 1868-555-8888.</font></h2>
 <h3><font size = "6"><font color = "white"> Email: Trinbagosportsuniform@gmail.com</font></h3>
-<a href="https://www.google.com/maps/place/Eastern+Main+Road,+San+Juan/@10.650122,-61.4537979,16.75z/data=!4m5!3m4!1s0x8c360098be68bb65:0x7a7021df3ef8bc44!8m2!3d10.6501285!4d-61.4513823"><img src="capture.png"/></a></center>
+<a href="https://www.google.com/maps/place/Eastern+Main+Road,+San+Juan/@10.650122,-61.4537979,16.75z/data=!4m5!3m4!1s0x8c360098be68bb65:0x7a7021df3ef8bc44!8m2!3d10.6501285!4d-61.4513823"><img src="capture.PNG"/></a></center>
 		
 		
 		
